# rocm-infra-exercises

./: CMakeLists.txt  README.md  client.cpp  client_lib_bundle.cpp  lib.cpp  lib_main.cpp
